# Cell-Forge

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml
desktop/forma-wallpaper/: Cargo.toml  build.rs
desktop/forma-wallpaper/installer/: FormaWallpaper.iss
desktop/forma-wallpaper/scripts/: build-installer.ps1  generate_icons.py  phase7-soak.ps1  release-checksum.ps1  sign-release.ps1
desktop/forma-wallpaper/src/: main.rs
desktop/forma-wallpaper/src/windows_app/: assets.rs  config.rs  icon.rs  logs.rs  mod.rs  release_ops.rs  startup.rs  tray.rs  util.rs  wallpaper.rs  webview_bridge.rs
examples/: perf_baseline.rs
scripts/: bench-core.ps1
src/: lib.rs
www/: desktop-host.js  index.html  main.js  presets.js  shaders.js  site.css  site.js  style.css
www/modules/: desktop-interaction.js  rule-state.js  sim-utils.js
www/sandbox/: desktop-host.js  style.css
www/sandbox/modules/: runtime.js  webgl-utils.js
